--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!doctype html>
-<html lang="fr-CH">
+<html lang="fr-FR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Favicon/ORBIT - Favicon.svg" />
-    <meta name="description" content="Agence web à Genève spécialisée dans la création de sites web sur mesure. Paiement uniquement si satisfait. Première version en 7 jours. Devis gratuit." />
-    <meta name="keywords" content="création site web, agence web Genève, site internet suisse, développement web, site vitrine, site sur mesure" />
+    <meta name="description" content="Agence Web. Votre site en 7j pour 1999 EUR. Payez que s'il vous plaît !" />
+    <meta name="keywords" content="création site web, agence web Paris, site internet français, développement web, site vitrine, site sur mesure" />
     <meta name="author" content="Agence Orbit" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Agence Orbit | Votre site web sur mesure" />
-    <meta property="og:description" content="Agence web à Genève spécialisée dans la création de sites web sur mesure. Paiement uniquement si satisfait." />
+    <meta property="og:description" content="Agence Web Votre site en 7j pour 1999 EUR. Payez que s'il vous plaît !" />
     <meta property="og:image" content="https://i.imgur.com/aM3st2Q.png" />
-    <meta property="og:url" content="https://agence-orbit.ch" />
+    <meta property="og:url" content="https://agence-orbit.fr" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Agence Orbit | Votre site web sur mesure" />
-    <meta name="twitter:description" content="Agence web à Genève spécialisée dans la création de sites web sur mesure. Paiement uniquement si satisfait." />
+    <meta name="twitter:description" content="Agence Web Votre site en 7j pour 1999 EUR. Payez que s'il vous plaît !" />
     <meta name="twitter:image" content="https://i.imgur.com/aM3st2Q.png" />
 
-    <!-- Balise alternate (si nécessaire, ici pour les marchés Suisse) -->
-    <link rel="alternate" hreflang="fr-CH" href="https://agence-orbit.ch" />
+    <!-- Balise alternate pour la version française -->
+    <link rel="alternate" hreflang="fr-FR" href="https://agence-orbit.fr" />
     
     <!-- Canonical -->
-    <link rel="canonical" href="https://agence-orbit.ch" />
+    <link rel="canonical" href="https://agence-orbit.fr" />
 
     <!-- Google Tag Manager -->
     <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});
       var f=d.getElementsByTagName(s)[0], j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
       j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
       f.parentNode.insertBefore(j,f);
@@ -45,7 +46,7 @@
       media="print"
       onload="this.onload=null;this.media='all'"
     />
-    <link rel="preload" as="video" href="/videos/hero-background.mp4" type="video/mp4" fetchpriority="high" />
+    <link rel="preload" as="video" href="https://res.cloudinary.com/damvotg5h/video/upload/v1738938684/k489z6pa98ea1xpb9ops.mp4" type="video/mp4" fetchpriority="high" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -67,19 +68,19 @@
         "@context": "https://schema.org",
         "@type": "WebDesign",
         "name": "Agence Orbit",
-        "description": "Agence web à Genève spécialisée dans la création de sites web sur mesure",
-        "url": "https://agence-orbit.ch",
+        "description": "Agence Web Votre site en 7j pour 1999 EUR. Payez que s'il vous plaît !",
+        "url": "https://agence-orbit.fr",
         "logo": "https://i.imgur.com/aM3st2Q.png",
         "address": {
           "@type": "PostalAddress",
-          "addressLocality": "Genève",
-          "addressCountry": "CH"
+          "addressLocality": "Annecy",
+          "addressCountry": "FR"
         },
-        "telephone": "+41228860069",
-        "email": "info@agence-orbit.ch",
-        "priceRange": "CHF 1999-2999",
+        "telephone": "+33695513765",
+        "email": "info@agence-orbit.fr",
+        "priceRange": "EUR 1999-2999",
         "openingHours": "Mo-Fr 09:00-18:00",
-        "sameAs": ["https://agence-orbit.ch"]
+        "sameAs": ["https://agence-orbit.fr"]
       }
     </script>
 
