Balise hreflang et url canoniques nickel

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="twitter:description" content="Agence Web Votre site en 7j pour 1999 EUR. Payez que s'il vous plaît !" />
     <meta name="twitter:image" content="https://i.imgur.com/aM3st2Q.png" />
 
-    <!-- Balise alternate pour la version française -->
+    <!-- Balises multilingues -->
     <link rel="alternate" hreflang="fr-FR" href="https://agence-orbit.fr" />
-    
+    <link rel="alternate" hreflang="x-default" href="https://agence-orbit.com" />
     <!-- Canonical -->
     <link rel="canonical" href="https://agence-orbit.fr" />
 
